Bug 9816 - mergedfb broken with xorg-server-1.2.0
Summary: mergedfb broken with xorg-server-1.2.0
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Server/General (show other bugs)
Version: 7.2 (2007.02)
Hardware: Other Linux (All)
: medium major
Assignee: Xorg Project Team
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-01-30 15:36 UTC by Gilles Dartiguelongue
Modified: 2007-07-02 01:07 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments
xorg.conf (3.01 KB, text/plain)
2007-01-30 15:38 UTC, Gilles Dartiguelongue
no flags Details
prevent maxPixClock from being completely random. (1.08 KB, patch)
2007-03-02 09:02 UTC, Łukasz Stelmach
no flags Details | Splinter Review
Fully zero-initialize CRTC2 monitor struct (572 bytes, patch)
2007-06-09 04:30 UTC, Michel Dänzer
no flags Details | Splinter Review

Description Gilles Dartiguelongue 2007-01-30 15:36:18 UTC
After updating to xorg-server-1.2.0, the mergedfb setup I have just stopped working due to :

commit d89fee68d0e49211871cd9eb3893ed55c1d478a6
Author: Adam Jackson <ajax@benzedrine.nwnk.net>
Date:   Thu Sep 14 18:41:15 2006 -0400

    Record the maximum dot clock of the monitor, and filter by it.

The display would just work in clone mode.

I did a simple patch that reverts the changes and now xorg-server works
as expected. I'm open to better solutions and be happy to help settle
this properly.
Comment 1 Gilles Dartiguelongue 2007-01-30 15:38:36 UTC
Created attachment 8546 [details]
xorg.conf


This is my configuration file.
I'm using xf86-video-radeon-6.6.3
Comment 2 Gilles Dartiguelongue 2007-01-30 15:40:24 UTC
Originaly posted as :
http://lists.freedesktop.org/archives/xorg/2007-January/021403.html

A problem that looks similar :
http://lists.freedesktop.org/archives/xorg/2007-January/021287.html
Comment 3 Patrick van Staveren 2007-01-30 16:05:34 UTC
Am also having this issue; can recreate and post logs & xorg.conf as necessary.
Comment 4 Daniel Stone 2007-02-27 01:36:04 UTC
Sorry about the phenomenal bug spam, guys.  Adding xorg-team@ to the QA contact so bugs don't get lost in future.
Comment 5 Łukasz Stelmach 2007-03-02 08:58:39 UTC
I experienced the same problem after upgrading my ubuntu/feisty x11 packages two or three days ago. I compared the logs and discover quite new message appearing during validation of modes: "mode clock too high". There is only one check that may result, if failed, in such a message:
http://gitweb.freedesktop.org/?p=xorg/xserver.git;a=blob;h=fc905dfac38fb7a253b8cd54b1379da430bd635c;hb=39ecd6fff4f946deebe310b4b26b171c842db223;f=hw/xfree86/common/xf86Mode.c#l905

However, a new member of monitor structure named maxPixClock has been introduced, radeon driver does not care about it at all which makes the value completely random. I tried assigning info->CRT2pScrn->monitor->maxPixClock (look the patch below) I got the driver working, i.e. dual head without cloning.
Comment 6 Łukasz Stelmach 2007-03-02 09:02:09 UTC
Created attachment 8953 [details] [review]
prevent maxPixClock from being completely random.

maxPixClock should be assigned more reasonable value, possibly DDC detected one. But zero brings back MergedFB. What seems strange is that it doesn't matter if the first monitor's maxPixClock is zero or not.
Comment 7 Gilles Dartiguelongue 2007-04-22 07:11:32 UTC
looks like it's fixed with xorg-server 1.3 with xf86-video-ati-6.6.191

could somebody confirm ?
Comment 8 Michel Dänzer 2007-06-09 04:30:09 UTC
Created attachment 10237 [details] [review]
Fully zero-initialize CRTC2 monitor struct

Łukasz, does this patch help as well?
Comment 9 Michel Dänzer 2007-07-02 01:07:48 UTC
Several people reported my patch to work in the Debian BTS, pushed as commit ac9cbaf32176cf144bc694ac879e7c9e2920f762.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.