radeon: Fully zero-initialize info->CRT2pScrn->monitor.

This prevents modes from getting rejected due to the uninitialized maxPixClock
value.

Fixes http://bugs.freedesktop.org/show_bug.cgi?id=9816 .